<resources>
    <string name="app_name">AirTickets</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="air_tickets_label">Авиабилеты</string>
    <string name="hotel_label">Отели</string>
    <string name="shorter_label">Короче</string>
    <string name="subscriptions_label">Подписки</string>
    <string name="profile_label">Профиль</string>
    <string name="search_label">Search</string>
    <string name="bottom_label">Ваш первый раз</string>
    <string name="show_places_label">Показать все места</string>
    <string name="center_label">Музыкально отлететь</string>
    <string name="from_label">Откуда - Москва</string>
    <string name="to_label">Куда - Турция</string>
    <string name="search_advanced_label">Поиск дешевых авиабилетов</string>
    <string name="ticket_avatar">ticket avatar</string>
    <string name="air_icon">air icon</string>
    <string name="city_avatar">city avatar</string>
    <string name="popular_route_label">Популярное направление</string>
    <string name="cancel_label">Cancel</string>
    <string name="route_icon">route icon</string>
    <string name="advanced_icon">advanced icon</string>
    <string name="escape_label">escape</string>
    <string name="back_label">обратно</string>
    <string name="filter_label">фильтры</string>
    <string name="direct_route_label">Прямые рейсы</string>
    <string name="check_all_tickets_label">Посмотреть все билеты</string>
    <string name="passenger_counter_label">1,эконом</string>
    <string name="range_label"> - </string>
    <string name="route_background_label">route background</string>
    <string name="route_label">route</string>
    <string name="hardcore_route_label">Сложный маршрут</string>
    <string name="globe_background_label">globe background</string>
    <string name="globe_icon_label">globe icon</string>
    <string name="anywhere_label">Куда угодно</string>
    <string name="calendar_background_label">calendar background</string>
    <string name="calendar_icon_label">calendar icon</string>
    <string name="weekend_label">Выходные</string>
    <string name="fire_background_label">fire background</string>
    <string name="fire_icon_label">fire icon</string>
    <string name="fire_tickets_label">Горячие билеты</string>
    <string name="prices_label">График цен</string>
    <string name="filter_label_second">Фильтр</string>
    <string name="barrier_label">/</string>
    <string name="transit_type_label">Без пересадок</string>
    <string name="filter_icon_dec">filter icon</string>
    <string name="prices_icon_dec">prices icon</string>
</resources>