<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/another_grey"
    android:orientation="vertical"
    tools:context="ru.lorderi.airtickets.ui.fragments.AirlineTicketsBottomSheetDialog">


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/searchPanel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:cardBackgroundColor="@color/darker_grey"
        app:cardCornerRadius="16dp"
        app:layout_constraintBottom_toTopOf="@id/fastMenu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeColor="@android:color/transparent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/planeIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:contentDescription="@string/search_label"
                android:src="@drawable/ic_plane"
                app:layout_constraintBottom_toBottomOf="@id/cityFrom"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/cityFrom" />

            <EditText
                android:id="@+id/cityFrom"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:background="@android:color/transparent"
                android:hint="@string/from_label"
                android:importantForAutofill="no"
                android:inputType="textCapSentences|textAutoCorrect"
                android:textSize="16sp"
                app:layout_constraintBottom_toTopOf="@id/cityTo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/searchIcon"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                app:dividerColor="@color/dark_grey"
                app:layout_constraintBottom_toTopOf="@id/cityTo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cityFrom" />

            <ImageView
                android:id="@+id/searchIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:contentDescription="@string/search_label"
                android:src="@drawable/ic_search"
                app:layout_constraintBottom_toBottomOf="@id/cityTo"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/cityTo"
                app:tint="#FFFFFF" />

            <EditText
                android:id="@+id/cityTo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:background="@android:color/transparent"
                android:hint="@string/to_label"
                android:importantForAutofill="no"
                android:inputType="textCapSentences|textAutoCorrect"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/cancel"
                app:layout_constraintStart_toEndOf="@id/searchIcon"
                app:layout_constraintTop_toBottomOf="@id/cityFrom" />

            <ImageView
                android:id="@+id/cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:contentDescription="@string/cancel_label"
                android:src="@drawable/ic_cancel"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/cityTo"
                app:layout_constraintTop_toBottomOf="@id/cityFrom" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <LinearLayout
        android:id="@+id/fastMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:background="@color/another_grey"
        android:baselineAligned="false"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/cityPlate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/searchPanel"
        tools:context="ru.lorderi.airtickets.ui.fragments.AirlineTicketsBottomSheetDialog">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/routeBackground"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:background="@drawable/city_background"
                android:backgroundTint="@color/green"
                android:contentDescription="@string/route_background_label"
                android:padding="12dp"
                android:src="@drawable/ic_route" />

            <TextView
                android:id="@+id/routeLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_gravity="center"
                android:paddingTop="8dp"
                android:text="@string/hardcore_route_label"
                android:textAlignment="center" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/globeBackground"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@drawable/city_background"
                android:backgroundTint="@color/blue"
                android:contentDescription="@string/globe_background_label"
                android:padding="12dp"
                android:src="@drawable/ic_globe" />

            <TextView
                android:id="@+id/globeLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_gravity="center"
                android:maxLines="2"
                android:paddingTop="8dp"
                android:text="@string/anywhere_label"
                android:textAlignment="center" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/calendarBackground"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@drawable/city_background"
                android:backgroundTint="@color/dark_blue"
                android:contentDescription="@string/calendar_background_label"
                android:padding="12dp"
                android:src="@drawable/ic_calendar" />

            <TextView
                android:id="@+id/calendarLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_gravity="center"
                android:maxLines="2"
                android:paddingTop="8dp"
                android:text="@string/weekend_label"
                android:textAlignment="center" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/fireBackground"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@drawable/city_background"
                android:backgroundTint="@color/red"
                android:contentDescription="@string/fire_background_label"
                android:padding="12dp"
                android:src="@drawable/ic_fire" />

            <TextView
                android:id="@+id/fireLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_gravity="center"
                android:maxLines="2"
                android:paddingTop="8dp"
                android:text="@string/fire_tickets_label"
                android:textAlignment="center" />
        </LinearLayout>

    </LinearLayout>


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cityPlate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:cardBackgroundColor="@color/darker_grey"
        app:cardCornerRadius="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fastMenu"
        app:strokeColor="@android:color/transparent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/cityList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/city_card" />

    </com.google.android.material.card.MaterialCardView>


</androidx.constraintlayout.widget.ConstraintLayout>