<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context="ru.lorderi.airtickets.ui.fragments.AirlineTicketsSearchFragment">


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/searchPanel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="47dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="13dp"
        app:cardBackgroundColor="@color/darker_grey"
        app:cardCornerRadius="16dp"
        app:layout_constraintBottom_toTopOf="@id/chipMenu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeColor="@android:color/transparent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/searchMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/escape"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:contentDescription="@string/escape_label"
                android:src="@drawable/ic_escape"
                app:layout_constraintBottom_toBottomOf="@id/cityTo"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/cityFrom" />

            <EditText
                android:id="@+id/cityFrom"
                style="@style/button_text1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="16dp"
                android:background="@android:color/transparent"
                android:hint="@string/from_label"
                android:importantForAutofill="no"
                android:inputType="textCapSentences|textAutoCorrect"
                android:textColor="@color/white"
                app:layout_constraintBottom_toTopOf="@id/cityTo"
                app:layout_constraintEnd_toStartOf="@id/move"
                app:layout_constraintStart_toEndOf="@id/escape"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/move"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:contentDescription="@string/cancel_label"
                android:src="@drawable/ic_filter"
                app:layout_constraintBottom_toTopOf="@id/cancel"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/cityFrom"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="16dp"
                app:dividerColor="@color/dark_grey"
                app:layout_constraintBottom_toTopOf="@id/cityTo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/escape"
                app:layout_constraintTop_toBottomOf="@id/cityFrom" />

            <EditText
                android:id="@+id/cityTo"
                style="@style/button_text1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="16dp"
                android:background="@android:color/transparent"
                android:hint="@string/to_label"
                android:importantForAutofill="no"
                android:inputType="textCapSentences|textAutoCorrect"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/cancel"
                app:layout_constraintStart_toEndOf="@id/escape"
                app:layout_constraintTop_toBottomOf="@id/cityFrom" />

            <ImageView
                android:id="@+id/cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:contentDescription="@string/cancel_label"
                android:src="@drawable/ic_cancel"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/cityTo"
                app:layout_constraintTop_toBottomOf="@id/move" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <HorizontalScrollView
        android:id="@+id/chipMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        app:layout_constraintBottom_toTopOf="@id/popularPlate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/searchPanel">

        <com.google.android.material.chip.ChipGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp">

            <com.google.android.material.chip.Chip
                android:id="@+id/back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/back_label"
                android:textAppearance="@style/chip1"
                app:chipBackgroundColor="@color/darker_grey"
                app:chipCornerRadius="50dp"
                app:chipIcon="@drawable/ic_add"
                app:chipStrokeColor="@android:color/transparent" />

            <com.google.android.material.chip.Chip
                android:id="@+id/currentDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/chip1"
                app:chipBackgroundColor="@color/darker_grey"
                app:chipCornerRadius="50dp"
                app:chipStrokeColor="@android:color/transparent"
                tools:text="24 фев, сб" />

            <com.google.android.material.chip.Chip
                android:id="@+id/passengerCounter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/passenger_counter_label"
                android:textAppearance="@style/chip1"
                app:chipBackgroundColor="@color/darker_grey"
                app:chipCornerRadius="50dp"
                app:chipIcon="@drawable/ic_profile"
                app:chipStrokeColor="@android:color/transparent" />

            <com.google.android.material.chip.Chip
                android:id="@+id/filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/filter_label"
                android:textAppearance="@style/chip1"
                app:chipBackgroundColor="@color/darker_grey"
                app:chipCornerRadius="50dp"
                app:chipIcon="@drawable/ic_settings"
                app:chipStrokeColor="@android:color/transparent" />

        </com.google.android.material.chip.ChipGroup>

    </HorizontalScrollView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/popularPlate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:cardBackgroundColor="@color/darkest_grey"
        app:cardCornerRadius="16dp"
        app:layout_constraintBottom_toTopOf="@id/showAllTickets"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/chipMenu"
        app:strokeColor="@android:color/transparent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:orientation="vertical">

            <TextView
                style="@style/title2"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/direct_route_label"
                android:textSize="20sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/cityList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/popular_route_card" />

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/showAllTickets"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/button_text1"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="24dp"
        android:text="@string/check_all_tickets_label"
        android:textAlignment="center"
        android:layout_marginStart="16dp"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="italic"
        app:backgroundTint="@color/blue"
        app:cornerRadius="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/popularPlate" />


</androidx.constraintlayout.widget.ConstraintLayout>