<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context="ru.lorderi.airtickets.ui.fragments.AirlineTicketsFragment">

    <TextView
        android:id="@+id/searchLabel"
        android:layout_width="172dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="94dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="94dp"
        android:text="@string/search_advanced_label"
        android:textAlignment="center"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@id/searchPanel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/searchPanel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="35dp"
        app:cardBackgroundColor="@color/darker_grey"
        app:layout_constraintBottom_toTopOf="@id/centerLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/searchLabel"
        app:strokeColor="@android:color/transparent">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:cardBackgroundColor="@color/dark_grey"
            app:strokeColor="@android:color/transparent">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/searchIcon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:contentDescription="@string/search_label"
                    android:src="@drawable/ic_search"
                    app:layout_constraintBottom_toBottomOf="@id/cityTo"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/cityFrom" />

                <EditText
                    android:id="@+id/cityFrom"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:background="@android:color/transparent"
                    android:hint="@string/from_label"
                    android:importantForAutofill="no"
                    android:inputType="textCapSentences|textAutoCorrect"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toTopOf="@id/cityTo"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/searchIcon"
                    app:layout_constraintTop_toTopOf="parent" />


                <com.google.android.material.divider.MaterialDivider
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    app:dividerColor="@color/light_grey"
                    app:layout_constraintBottom_toTopOf="@id/cityTo"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/searchIcon"
                    app:layout_constraintTop_toBottomOf="@id/cityFrom" />

                <EditText
                    android:id="@+id/cityTo"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:background="@android:color/transparent"
                    android:focusable="false"
                    android:hint="@string/to_label"
                    android:importantForAutofill="no"
                    android:inputType="textCapSentences|textAutoCorrect"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/searchIcon"
                    app:layout_constraintTop_toBottomOf="@id/cityFrom" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>
    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/centerLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="19dp"
        android:text="@string/center_label"
        android:textAlignment="viewStart"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@id/musicList"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.087"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/searchPanel" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/musicList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/centerLabel"
        tools:listitem="@layout/ticket_card" />


</androidx.constraintlayout.widget.ConstraintLayout>